# atrias

./: .gitignore  MF0210010-X0X-OREGON-RV3.rtf  atrias_soem_diff.patch  pr2config  test_file.txt  zotacconfig
drl-sim/atrias_controller_switcher/: CMakeLists.txt  atrias_controller_switcher.cpp  mainpage.dox  manifest.xml
drl-sim/atrias_controller_switcher/src/: control_switcher_state_machine.cpp
drl-sim/atrias_controller_wrapper/: CMakeLists.txt  application.ops  atrias_controller_wrapper-component.cpp  atrias_controller_wrapper-component.hpp  atrias_controller_wrapper-plugin.cpp  atrias_controller_wrapper-types.hpp  atrias_controller_wrapper.cpp  manifest.xml
drl-sim/atrias_controller_wrapper/src/: controller_wrapper_states.cpp
drl-sim/atrias_controllers/: CMakeLists.txt  mainpage.dox  manifest.xml  stack.xml
drl-sim/atrias_controllers/ac_debug/: CMakeLists.txt  controller.txt  mainpage.dox  manifest.xml
drl-sim/atrias_controllers/ac_demo/: controller.txt  controller_gui.glade  mainpage.dox  manifest.xml
drl-sim/atrias_controllers/ac_hubicki/: controller.txt  controller_gui.glade  mainpage.dox  manifest.xml
drl-sim/atrias_controllers/ac_leg_angle_sine_wave/: controller.txt  mainpage.dox  manifest.xml
drl-sim/atrias_controllers/ac_leg_force/: controller.txt  controller_gui.glade  mainpage.dox  manifest.xml
drl-sim/atrias_controllers/ac_leg_position/: mainpage.dox  manifest.xml
drl-sim/atrias_controllers/ac_leg_torque/: controller.txt  controller_gui.glade  mainpage.dox  manifest.xml
drl-sim/atrias_controllers/ac_motor_position/: controller_gui.glade  mainpage.dox  manifest.xml
drl-sim/atrias_controllers/ac_raibert/: controller.txt  mainpage.dox  manifest.xml
drl-sim/atrias_controllers/ac_test/: controller.txt  controller_gui.glade  mainpage.dox  manifest.xml
drl-sim/atrias_controllers/ac_touchdown_velocity_test/: controller_gui.glade  mainpage.dox
drl-sim/atrias_controllers/controller_gen/: mainpage.dox  manifest.xml
drl-sim/atrias_controllers/msg/: AtriasData.msg
drl-sim/atrias_controllers/scripts/: ldmod
drl-sim/atrias_controllers/src/: all_in_one_controller_wrapper.cpp  control_switcher_state_machine.cpp  controller_wrapper_states.cpp  data_logger.cpp  data_publisher.cpp  data_subscriber.cpp  demo_controller.cpp  ecat_interface.cpp  equ_gait_controller.cpp  grizzle_controller.cpp  hubicki_controller.cpp  jesse_controller.cpp  leg_angle_sin_wave.cpp  leg_force_controller.cpp  leg_position_controller.cpp  leg_torque_controller.cpp  lut_pi8_025step.cpp  motor_position_controller.cpp  motor_torque_controller.cpp  motor_torque_square_wave_gen.cpp  no_controller.cpp  raibert_controller.cpp  raibert_controller_moving_average.cpp  rt_atrias_controller_wrapper.c  rt_atrias_controller_wrapper.cpp  test_controller.cpp  tester.cpp  wireless_kern_interface.cpp
drl-sim/atrias_controllers/srv/: atrias_srv.srv
drl-sim/atrias_ecat_master/: CMakeLists.txt  Makefile  application.ops  atrias_ecat_master.cpp  manifest.xml
drl-sim/atrias_ecat_master/src/: Makefile  control_switcher_state_machine.c  controller_wrapper_states.c  controller_wrapper_states.h  leg_angle_sin_wave.c  leg_position_controller.c  leg_torque_controller.c  motor_torque_controller.c  no_controller.c  raibert_controller.c  rtai_controller_wrapper.c  rtai_controller_wrapper.h  test_controller.c  uspace_controller_wrapper.cpp
drl-sim/atrias_ecat_master_uspace/: CMakeLists.txt  mainpage.dox  manifest.xml
drl-sim/atrias_ecat_master_uspace/src/: Makefile  controller_wrapper_states.c  controller_wrapper_states.cpp  controller_wrapper_states.h  leg_torque_controller.c  motor_position_controller.c  raibert_controller.c  test_controller.c  uspace_controller_wrapper.c  uspace_controller_wrapper.cpp  uspace_controller_wrapper.h
drl-sim/atrias_orocos_test/: .tb_history  CMakeLists.txt  application.ops  atrias_orocos_test-component.cpp  atrias_orocos_test-component.hpp  atrias_orocos_test-plugin.cpp  manifest.xml  soem_et1100.cpp  soem_et1100.h  soem_medulla.cpp
drl-sim/atrias_sim/: CMakeLists.txt  mainpage.dox  manifest.xml
drl-sim/atrias_sim/launch/: all_in_one.launch  atrias20_biped_boom.launch  atrias20_biped_planar.launch  atrias20_boom.launch  atrias20_planar.launch  boomTest.launch  inverted_pendulum.launch  inverted_pendulum_with_toe.launch
drl-sim/atrias_sim/robots/: all_in_one.urdf.xacro  atrias.model  atrias.urdf.xacro  atrias20_biped_boom_header.urdf.xacro  atrias20_biped_planar_header.urdf.xacro  atrias20_boom_header.urdf.xacro  atrias20_leg.urdf.xacro  atrias20_planar_constraint.urdf.xacro  atrias20_planar_header.urdf.xacro  atrias20_torso.urdf.xacro  boom21.urdf.xacro  boomTest.urdf.xacro  boomTestHeader.urdf.xacro  inverted_pendulum_header.urdf.xacro  inverted_pendulum_mass.urdf.xacro  inverted_pendulum_toe.urdf.xacro  (+2 more)
drl-sim/drl_plugins/: CMakeLists.txt  mainpage.dox  manifest.xml
rtt-exercises-2.3.2/controller-1-solution/: .cproject  .project  CMakeLists.txt  Exercise.txt  UseCase.txt
rtt-exercises-2.3.2/hello-6-scripting/: .cproject  .project  CMakeLists.txt  HelloWorld.cpp  hello-6-scripting-gnulinux.pc  manifest.xml  program.ops  statemachine.osd
software/atrias_asc_loader/: CMakeLists.txt  manifest.xml
software/atrias_control_lib/: CMakeLists.txt  manifest.xml
software/atrias_controller_manager/: CMakeLists.txt  controller_manager.ops  mainpage.dox  manifest.xml
software/atrias_csim_conn/: CMakeLists.txt  cSimConn.ops  manifest.xml
software/atrias_elabs_conn/: CMakeLists.txt  ecatConn.ops  elabsConn.ops  manifest.xml
software/atrias_event_manager/: CMakeLists.txt  manifest.xml
software/atrias_gui/: CMakeLists.txt  mainpage.dox  manifest.xml
software/atrias_lib_control/: CMakeLists.txt  manifest.xml
software/atrias_medulla_drivers/: CMakeLists.txt  mainpage.dox  manifest.xml
software/atrias_noop_conn/: CMakeLists.txt  noopConn.ops
software/atrias_rt_ops/: CMakeLists.txt  manifest.xml  rt_ops.ops
software/atrias_shared/: CMakeLists.txt  manifest.xml
software/atrias_sim/: CMakeLists.txt  mainpage.dox  manifest.xml
(+2055 files in other folders)
